Remove default search

--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
 
       var visualSearch = VS.init({
         container : $('.visual_search'),
-        query     : 'category: software text: ruby',
+        query     : '',
         callbacks : {
           search       : function(query, searchCollection) {
             facets = searchCollection.map(function(item) {
