--- a/index.html
+++ b/index.html
@@ -71,6 +71,14 @@
         height: 240px;
       }
 
+      #more,
+      #no-more {
+        clear:both;
+        display:none;
+        text-align: center;
+        margin-top: 1em;
+      }
+
       dl {
         padding: 0;
         margin: 0;
@@ -105,6 +113,8 @@
     <div id="content">
       <div class="visual_search"></div>
       <div id="things"></div>
+      <div id="more"><a href="#" id="link-more">Load more</a></div>
+      <div id="no-more">You have reached the last thing in the seach, congrats!</div>
       <footer>Maby by Simon Gate &lt;simon@smgt.me&gt;</footer>
     </div>
   <script id="thingTemplate" type="text/template">
@@ -129,10 +139,79 @@
   </script>
   <script type="text/javascript" charset="utf-8">
 
+    $(function() {
+        var more = $('a#link-more');
+        more.bind("click", function() {
+
+          if(Config.page * Config.count <= Config.totalItems)
+          {
+            Config.page = Config.page + 1;
+            console.log("more click" + Config.page);
+            var facets = parseQuery(visualSearch.searchQuery);
+            fetchThings(facets);
+          }
+
+          if(Config.page * Config.count > Config.totalItems) {
+            $("#more").hide();
+            $("#no-more").show();
+          }
+
+
+          return false;
+        });
+
+      });
+
+      Config = {
+        page: 1,
+        count: 9,
+        totalItems: 0
+      }
+
+      var fetchThings = function(params) {
+        var querystring = $.param(params);
+        $.getJSON("https://api.flattr.com/rest/v2/things/search?"+querystring,
+          function(data) {
+            if(data.things) {
+              collection = new Things(data.things);
+              console.log(data.total_items);
+              Config.totalItems = data.total_items;
+              toggleMore();
+              console.log("fetchThings: "+Config.page);
+              new ThingListView({collection: collection});
+            }
+        });
+      };
+
+      var toggleMore = function() {
+        if(Config.page * Config.count < Config.totalItems) {
+          $('#more').show();
+          $('#no-more').hide();
+        }
+        if(Config.page * Config.count > Config.totalItems) {
+          $('#more').hide();
+          $('#no-more').show();
+        }
+      }
+
+      var parseQuery= function(query) {
+        facets = query.map(function(item) {
+          item = item.toJSON();
+          if(item.category === "text") {
+            item.category = "query";
+          }
+          return {value: item.value, name: item.category};
+        });
+        facets.push({ name: "count", value: Config.count });
+        facets.push({ name: "page", value: Config.page });
+        console.log("parse: "+Config.page);
+        facets.push({ name: "sort", value: "trend" });
+        return facets;
+      }
+
       Thing = Backbone.Model.extend({
           initialize: function() {
             var image = this.get("image");
-            console.log(image);
             if(image) {
               this.set({image: image.replace(/medium/, "huge")});
             }
@@ -141,6 +220,8 @@
 
       Things = Backbone.Collection.extend({
           model: Thing,
+          initialize: function() {
+          },
         });
 
       ThingView = Backbone.View.extend({
@@ -165,7 +246,7 @@
           },
           render: function() {
             var that = this;
-            $(this.el).html("");
+            //$(this.el).html("");
             _(this.collection.models).each(function(item){
               item = new ThingView({model: item});
               $(that.el).append(item.render().el);
@@ -180,23 +261,13 @@
         query     : 'smgt',
         callbacks : {
           search       : function(query, searchCollection) {
-            facets = searchCollection.map(function(item) {
-              item = item.toJSON();
-              if(item.category === "text") {
-                item.category = "query";
-              }
-              return {value: item.value, name: item.category};
-              });
-            facets.push({name:"count",value:"15"});
-            facets.push({name:"sort",value:"trend"});
-            params = $.param(facets);
-            $.getJSON("https://api.flattr.com/rest/v2/things/search?"+params,
-              function(data) {
-                if(data.things) {
-                  collection = new Things(data.things);
-                  new ThingListView({collection: collection});
-                }
-              });
+            $('#things').html("");
+            if( query != '')
+            {
+              var facets = parseQuery(searchCollection);
+              Config.page = 1;
+              fetchThings(facets);
+            }
           },
           facetMatches : function(callback) {
           callback([
@@ -218,7 +289,7 @@
               case 'category':
                 $.getJSON("https://api.flattr.com/rest/v2/categories.json",
                     function(data) {
-                      collection = _.map(data, function(obj) { return {value: obj.id, label: obj.text} });
+                      var collection = _.map(data, function(obj) { return {value: obj.id, label: obj.text} });
                       callback(collection);
                     }
                   );
@@ -226,7 +297,7 @@
               case 'language':
                 $.getJSON("https://api.flattr.com/rest/v2/languages.json",
                     function(data) {
-                      collection = _.map(data, function(obj) { return {value: obj.id, label: obj.text} });
+                      var collection = _.map(data, function(obj) { return {value: obj.id, label: obj.text} });
                       callback(collection);
                     }
                   );
