--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE HTML>
 <html>
   <head>
-    <title>Search Flattr</title>
+    <title>Search Flattr ()</title>
     <!--[if (!IE)|(gte IE 8)]><!-->
       <link href="css/visualsearch-datauri.css" media="screen" rel="stylesheet" type="text/css" />
     <!--<![endif]-->
